# chromadb-mcp

./: Justfile  README.md  main.py  pyproject.toml
scripts/files_ingestion/: __init__.py  files_ingestion.py  main.py
src/: __init__.py  dependency_manager.py  server.py
src/configs/: __init__.py  chromadb.py
src/infra/: __init__.py  chromadb_repository.py  google_embeddings.py
src/ports/: __init__.py  embeddings.py  vector_store.py
src/tools/: __init__.py  vector_store.py
